apps/medtech-website/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medtech-web
  namespace: medtech
spec:
  replicas: 1
  selector:
    matchLabels: { app: medtech-web }
  template:
    metadata:
      labels: { app: medtech-web }
    spec:
      containers:
      - name: web
        image: nginx:stable
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
      volumes:
      - name: html
        configMap:
          name: emsi-web-html
